# better_bitset

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
benchmark/: CMakeLists.txt  benchmark.cpp  results.txt
include/: better_bitset.hpp
test/: CMakeLists.txt  runtest.sh  test.cpp
